@startuml
class GunnerController {
    + preferredDistance : float = 5f
    + _jumpChance : float = 0.2f
    + <<override>> GetHorizontalMovement() : float
    + <<override>> IsJumpPressed() : bool
    + <<override>> GetAttackDirection() : Vector2?
}
enum State {
    INITAL,
    IDLE,
    ATTACKING,
    RELOADING,
}
AIController <|-- GunnerController
InputController <|-- GunnerController
GunnerController +-- State
@enduml
